# gerbera

./: .travis.yml  CMakeLists.txt
cmake/: GenCompileInfo.cmake
config/: config2.xsd
doc/: README.md  config-overview.rst  do_sphinx.sh  icons.rst
gerbera-web/: .eslintrc  index.js  karma.conf.js  package-lock.json  package.json  test-context.js
gerbera-web/mock-playlists/: remote-playlist.pls
gerbera-web/test/client/: gerbera.app.spec.js  gerbera.auth.spec.js  gerbera.autoscan.spec.js  gerbera.items.spec.js  gerbera.menu.spec.js  gerbera.updates.spec.js  jquery.gerbera.autoscan.spec.js  (+4 more)
src/: common.h  config_manager.cc  config_manager.h  content_manager.cc  content_manager.h  fd_io_handler.h  online_service.h  server.cc  storage.h  upnp_xml.cc  upnp_xml.h  url.cc  url.h
src/config/: IConfigManager.h  config_generator.cc  config_generator.h  gerbera_conf_manager.h
src/content/: abstract_content_manager.h  gerbera_content_manager.h
src/gerbera/: exception.cc  exception.h  gerbera.h  url.cc  url.h
src/icons/: dynamic_icon.cc  dynamic_icon.h  gerbera_icon.cc  gerbera_icon.h  icon.h  icon_config.cc  icon_config.h  icon_exception.h  icon_loader.cc  icon_loader.h  icon_request_handler.cc  icon_request_handler.h  icon_xml_helper.cc  icon_xml_helper.h  image_helper.cc  image_helper.h  static_icon.cc  static_icon.h
src/storage/: abstract_storage.h  gerbera_storage.h  sql_storage.cc  sql_storage.h
src/streaming/: configured_playlist.cc  configured_playlist.h  curl_downloader.cc  curl_downloader.h  curl_downloader_mock.cc  downloader.h  inmemory_playlist.cc  inmemory_playlist.h  playlist_parse_result.cc  playlist_parse_result.h  playlist_parser.cc  playlist_parser.h  playlist_task.cc  playlist_task.cpp  playlist_task.h  remote_playlist.cc  remote_playlist.h  shoutcast_options.cc  shoutcast_options.h  streaming_content.h  streaming_content_service.cc  streaming_content_service.h  streaming_options.cc  streaming_options.h  streaming_playlists.cc  streaming_playlists.h
src/task/: task.cc  task.h  task_threadpool.cc  task_threadpool.h  task_worker.cc  task_worker.h  threadpool.h
test/: CMakeLists.txt
test/test_config/: test_configgenerator.cc  test_configmanager.cc
test/test_content/: CMakeLists.txt
test/test_gerbera/: CMakeLists.txt  test_exception.cc  test_url.cc
test/test_icons/: CMakeLists.txt  test_dynamic_icon.cc  test_icon_config.cc  test_icon_handler.cc  test_icon_loader.cc  test_icon_xml_helper.cc  test_image_helper.cc  test_static_icon.cc
test/test_icons/fixtures/: dynamic-invalid.xml  dynamic-mimetypes-list.xml  dynamic-not-found.xml  dynamic-resolution-list.xml  dynamic-template.xml  no-such-file.xml  static-list.xml
test/test_icons/mock/: upnp_file_info_fixture.h  upnp_file_info_mock.h
test/test_searchhandler/: test_searchhandler.cc
test/test_server/: test_server.cc
test/test_streaming/: CMakeLists.txt  test_curldownloader.cc  test_inmemory_playlist.cc  test_playlist_task.cc  test_playlistparser.cpp  test_remote_playlist.cc  test_shoutcast_options.cc  test_streaming_content_service.cc  test_streaming_options.cc  test_streaming_playlists.cc
test/test_streaming/fixtures/: example.m3u  example.pls  example.xspf  simple.pls
test/test_streaming/mock/: config_mgr_mock.h  content_manager_mock.h  curl_downloader_mock.h  storage_mock.h  streaming_service_mock.h  task_threadpool_mock.h
test/test_tasks/: CMakeLists.txt  test_task_threadpool.cc
test/test_upnp/: test_upnp_xml.cc
web/: index.html
web/js/: gerbera-app.module.js  gerbera-auth.module.js  gerbera-autoscan.module.js  gerbera-items.module.js  gerbera-menu.module.js  gerbera-trail.module.js  gerbera-tree.module.js  gerbera-updates.module.js  jquery.gerbera.items.js
(+7 files in other folders)
